--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body>
-  <h2>Conversor de Moneda</h2>
+  <h2>Conversiones de moneda</h2>
 
   <label for="cantidad">Cantidad:</label>
   <input type="number" id="cantidad" placeholder="Ingresa la cantidad" required>
